# portman

./: .gitignore  CHANGELOG.md  Makefile  README.md  portman.toml  portman.toml.example  pyproject.toml
ci/: github-portman.yml
docs/: 00-provenance-header.md  01-architecture.md  02-mapping-schema.md  03-database-design.md  04-progress-model.md  05-diff-engine.md  06-api-comparison.md  07-test-sync.md  08-behavioral-verification.md  09-upgrade-workflow.md  10-cicd.md  11-dashboard.md  12-roadmap.md  13-language-agnostic.md  tinygrad-port-todo.md
docs/requests/: explicit-method-precedence.md
mappings/: curated.jsonl
schema/: deviation.schema.json  inventory.schema.json  mapping.schema.json
src/portman/: __init__.py  classify.py  cli.py  commands.py  config.py  db.py  diff.py  health.py  inventory.py  matching.py  model.py  progress.py  provenance.py  report.py
src/portman/adapters/: __init__.py  base.py  generic.py  inventory_json.py  python_ast.py  rss.py
src/portman/commands/: __init__.py  _shared.py  analysis.py  curation.py  lifecycle.py  meta.py
tests/: agnostic.py  classification.py  explicit_method.py  harness.py  inventory_ingest.py  layering.py  module_matching.py  name_matching.py  smoke.py
